# equation_vids

./: .gitignore  create_video.py  pyproject.toml
Juliaset/: README.md  juliaset.py  juliaset_a.py  juliaset_a_cpu.py  juliaset_c.py  juliaset_p.py  points.json
Mandelbrot/: mandelbrot.py
Manim/: end_card.py
